# dataoperator

./: .gitignore  Makefile  README.md  pyproject.toml  setup.py
src/: __init__.py  base.py  dataoperator.py  free_email_domains.py  operator.py  parse.py
src/dataoperator/: country_mappings.py  dataoperator.py  disposable_email_domains.py  state_territory_mappings.py
tests/: test_base_operator.py  test_formatting.py  test_operator.py
