[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "dataoperator"
version = "0.1.0"
requires-python = ">=3.8"
authors = [
  {name = "Joe Fusaro", email = "joe@datachef.com"},
]
readme = "README.rst"

[project.urls]
Homepage = "https://datachef.com"